--- a/TFG/public/assets/css/style.css
+++ b/TFG/public/assets/css/style.css
@@ -78,35 +78,62 @@ header {
 	cursor: pointer;
 }
 
-.search-container {
+.custom-search-container {
 	font-family: 'CustomFont4';
 	display: flex;
 	align-items: center;
+	padding-top: 50px;
 }
 
-.search-container input[type="text"] {
-	/* padding: 5px; */
+.custom-search-input {
 	border-radius: 5px;
 	border: none;
 	margin-right: 15px;
 	padding-left: 10px;
+	padding: 5px;
 }
 
-.search-icon {
-	/* margin-left: 10px; */
+.custom-search-icon {
 	display: flex;
+	align-items: center;
 	justify-content: center;
-	margin-top: 10px;
 	width: 36px;
-	height: 30px;
+	height: 36px;
 	cursor: pointer;
-	border-radius: 3px;
-	padding-bottom: 3px;
+	border-radius: 50%;
+	background-color: #444;
+	color: #fff;
+	border: none;
 }
 
-.search-icon:hover {
-	border-bottom: solid 3px #fff;
-	padding-bottom: 0px;
+.custom-search-icon:hover {
+	background-color: #666;
+}
+
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+	background-color: #444;
+	color: #fff;
+}
+
+.breadcrumb-header {
+	font-size: 1.5em;
+	font-weight: bold;
+}
+
+.menu-icon i {
+	color: #fff;
+}
+
+.custom-form-buscador {
+	height: 0px;
+	margin-bottom: 50px;
+	background-color: #444;
+	display: flex;
+	align-items: center;
 }
 
 /* ################################################################s */
